# poetry-setuptools-scm-support

./: README.md  pyproject.toml
plugin/: __init__.py
poetry_setuptools_scm_support/: __init__.py
