[project]
name = "poetry-setuptools-scm-support"
requires-python = ">=3.10, <3.12"
version = "0.1.0"
description = ""
authors = [
    {name = "luca",email = "laxertu@gmail.com"}
]
readme = "README.md"
dependencies = [
    "setuptools-scm (>=8.1.0,<9.0.0)",
    "cleo (>=2.1.0,<3.0.0)",
    "poetry (>=2.0.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

#[project.entry-points."poetry-setuptools-scm-support.plugin"]
#demo = "poetry-setuptools-scm-support.plugin:ScmPlugin"
